=======
CHANGES
=======

3.7.1 (unreleased)
------------------

- Removed buildout part which was used during development but does not
  compile on Windows.


3.7.0 (2010-09-18)
------------------

- Initial release extracted from `zope.app.generations`.

- Generations key (stored in database root) has been changed from
  ``zope.app.generations`` to ``zope.generations``.  Migration is done when
  ``evolve`` is run the first time by coping the exisiting generations data
  over to the new key. So the old and the new key can be used in parallel.